...
      "isCommentAutoGenerated" : true
    },
    "Factor (relative to base unit)" : {
      "comment" : "A label for a text field that asks the user to enter a factor.",
      "isCommentAutoGenerated" : true
    },
    "Favorites" : {
      "comment" : "Title of the section that displays the user's favorite categories.",
      "isCommentAutoGenerated" : true
    },
    "Flow Rate" : {
      "comment" : "Name of the unit category for flow rate.",
      "isCommentAutoGenerated" : true
...
      "isCommentAutoGenerated" : true
    },
    "Group name (e.g. Screen Sizes)" : {
      "comment" : "A placeholder text for a text field where the user can enter a name for a new custom conversion group.",
      "isCommentAutoGenerated" : true
    },
    "History" : {
      "comment" : "The title of a view that shows a user's transaction history.",
      "isCommentAutoGenerated" : true
    },
    "I couldn't recognize the unit '%@'. Try using a common unit name like 'kilometers', 'pounds', or 'fahrenheit'." : {
      "comment" : "A description of an error that might occur when converting units.",
      "isCommentAutoGenerated" : true
...
      "isCommentAutoGenerated" : true
    },
    "Input" : {
      "comment" : "Label for the text field where the user inputs the value to convert.",
      "isCommentAutoGenerated" : true
    },
    "Length" : {
      "comment" : "Name of the unit category for measuring length.",
      "isCommentAutoGenerated" : true
    },
    "Makes the value negative or positive" : {
      "comment" : "A hint that appears when hovering over the button to toggle the negative sign of the input value.",
      "isCommentAutoGenerated" : true
...
      "isCommentAutoGenerated" : true
    },
    "Tap the result to copy it" : {
      "comment" : "A tip displayed on the converter view, instructing the user to tap the result text to copy it to their clipboard.",
      "isCommentAutoGenerated" : true
    },
    "Temperature" : {
      "comment" : "Name of the unit category for temperature.",
      "isCommentAutoGenerated" : true
    },
    "The factor defines how many base units equal 1 of this unit. The first unit in the group is the base (factor = 1)." : {
      "comment" : "A description below the text field for the factor of a custom unit, explaining its purpose.",
      "isCommentAutoGenerated" : true
...
